# ks-download

./: .gitattributes  LICENSE  README.md  Setup.hs  TODO.md  ks-dbinsert.conf  ks-download.cabal  ks-locate.conf  mongodb.conf  package.yaml  stack.yaml
doc/dev/: notes.md
pack/share/ks-download/resources/: ks-download-nc_chatham.conf  ks-download-nc_durham.conf
resources/: ks-download-nc_chatham.conf  ks-download-nc_durham.conf  ks-download-nc_orange.conf  ks-download-nc_wake.conf  ks-download.conf  mongodb.conf
src/: ks-clean.hs  ks-closed.hs  ks-datefix.hs  ks-dbinsert.hs  ks-dlinsp-cdp.hs  ks-dlinsp-dhd.hs  ks-dlinsp-nc_wake.hs  ks-dlinsp.hs  ks-locate.hs  ks-misc.hs  ks-regionupd.hs
src/KS/: Log.hs  SourceConfig.hs  Util.hs
src/KS/Clean/: Options.hs  Opts.hs  OptsOld.hs  Types.hs
src/KS/Clean/Closed/: Command.hs
src/KS/Clean/Old/: Command.hs
src/KS/Clean/Remove/: Command.hs  Options.hs
src/KS/Closed/: Opts.hs
src/KS/DBInsert/: Opts.hs
src/KS/DLInsp/: Opts.hs  Types.hs  Util.hs
src/KS/DLInsp/CDP/: Downloader.hs  NCDurham.hs  Opts.hs  Types.hs
src/KS/DLInsp/DHD/: Downloader.hs  Opts.hs  Types.hs
src/KS/DLInsp/NCWake/: Downloader.hs  Opts.hs  Types.hs
src/KS/DLInsp/Source/: Downloaders.hs  NCDurham.hs  NCWake.hs
src/KS/Database/: Config.hs  Mongo.hs  Opts.hs
src/KS/Database/Mongo/: Config.hs  Util.hs
src/KS/Locate/: Config.hs  Locate.hs  Opts.hs  SourceConfig.hs
src/KS/Locate/Places/: Geocoding.hs  Match.hs  NameWords.hs  Places.hs
src/KS/RegionUpd/: Opts.hs  Region.hs
src/app/: ks-clean.hs  ks-dbinsert.hs  ks-dlinsp-cdp.hs
src/ks-clean/KS/Clean/: Types.hs
src/ks-clean/KS/Clean/Closed/: Command.hs
src/ks-clean/KS/Clean/Old/: Command.hs  Options.hs
src/ks-dlinsp-dhd/: Main.hs
src/ks-locate/: Main.hs
src/ks-locate/KS/Locate/Places/: Geocoding.hs  Match.hs  Places.hs
src/ks-regionupd/: Main.hs
src/lib/KS/: Log.hs  Util.hs
src/lib/KS/Clean/Closed/: Options.hs
src/lib/KS/Clean/Remove/: Command.hs
src/lib/KS/DLInsp/CDP/: Downloader.hs  Types.hs
src/lib/KS/DLInsp/DHD/: Downloader.hs  Opts.hs  Types.hs
src/lib/KS/Locate/: Opts.hs
src/lib/KS/RegionUpd/: Opts.hs
testsuite/: Mongo.hs  NameWords.hs  Places.hs  test-Locate.hs
util/: findplacefromtext.sh  install.hs  install.sh  ks-dl-nightly-cdp.sh  ks-dl-nightly-dhd.sh  ks-dl-nightly-nc_durham.sh  ks-dl-nightly-nc_wake.sh  ks-dl-nightly.sh  ks-dl-report.sh  placedetails.sh
util/prefs/: boring
util/resources/DEBIAN/: control
