name: ks-download
version: 1.19
cabal-version: >=1.8
build-type: Custom
license: BSD3
license-file: LICENSE
copyright: 2014-2015 Dino Morelli
maintainer: Dino Morelli <dino@ui3.info>
stability: experimental
homepage: http://hub.darcs.net/dino/ks-download
synopsis: Data downloader and parser for the KitchenSnitch project
description:
    Bar Baz
category: Unknown
author: Dino Morelli
tested-with: GHC >=7.10.1
data-files:
    resources/ks-download.conf
    resources/ks-download-nc_chatham.conf
    resources/ks-download-nc_durham.conf
    resources/ks-download-nc_orange.conf
    resources/ks-download-nc_wake.conf
    resources/mongodb.conf
extra-source-files:
    changelog.md
    doc/dev/notes
    README.md
    util/gentags.sh
    util/inspconv.coffee
    util/install.sh
    util/ks-dl-nightly.sh
    util/resources/geocode.json
    util/resources/nc-wake/searchResultPage.html
    util/resources/places.json

source-repository head
    type: darcs
    location: http://hub.darcs.net/dino/ks-download

executable ks-dlinsp-cdp
    main-is: ks-dlinsp-cdp.hs
    build-depends:
        aeson ==0.9.*,
        base >=3 && <5,
        bytestring >=0.10.6.0 && <0.11,
        containers >=0.5.6.2 && <0.6,
        exceptions >=0.8.2.1 && <0.9,
        filepath >=1.4.0.0 && <1.5,
        HTTP >=4000.2.23 && <4000.3,
        ks-library >=1.9,
        lens >=4.13.2.1 && <4.14,
        lens-aeson >=1.0.0.5 && <1.1,
        mtl >=2.2.1 && <2.3,
        regex-compat >=0.95.1 && <0.96,
        tagsoup >=0.13.8 && <0.14,
        tce-conf ==1.1.*,
        text >=1.2.1.3 && <1.3,
        time >=1.5.0.1 && <1.6,
        utf8-string >=1.0.1.1 && <1.1,
        wreq >=0.4.1.0 && <0.5
    hs-source-dirs: src
    other-modules:
        KS.DLInsp.CDP.Downloader
        KS.DLInsp.CDP.Opts
        KS.DLInsp.CDP.Types
        KS.SourceConfig
        KS.Util
    ghc-options: -Wall

executable ks-dlinsp-nc_wake
    main-is: ks-dlinsp-nc_wake.hs
    build-depends:
        aeson ==0.9.*,
        base >=3 && <5,
        bytestring >=0.10.6.0 && <0.11,
        containers >=0.5.6.2 && <0.6,
        exceptions >=0.8.2.1 && <0.9,
        filepath >=1.4.0.0 && <1.5,
        HTTP >=4000.2.23 && <4000.3,
        ks-library >=1.9,
        mtl >=2.2.1 && <2.3,
        regex-compat >=0.95.1 && <0.96,
        tagsoup >=0.13.8 && <0.14,
        tce-conf ==1.1.*,
        text >=1.2.1.3 && <1.3,
        time >=1.5.0.1 && <1.6,
        utf8-string >=1.0.1.1 && <1.1
    hs-source-dirs: src
    other-modules:
        KS.DLInsp.NCWake.Downloader
        KS.DLInsp.NCWake.Opts
        KS.DLInsp.NCWake.Types
        KS.SourceConfig
        KS.Util
    ghc-options: -Wall

executable ks-locate
    main-is: ks-locate.hs
    build-depends:
        aeson ==0.9.*,
        aeson-pretty >=0.7.2 && <0.8,
        attoparsec >=0.13.0.1 && <0.14,
        base >=3 && <5,
        bson >=0.3.2.1 && <0.4,
        bytestring >=0.10.6.0 && <0.11,
        containers >=0.5.6.2 && <0.6,
        directory >=1.2.2.0 && <1.3,
        exceptions >=0.8.2.1 && <0.9,
        filepath >=1.4.0.0 && <1.5,
        hslogger >=1.2.9 && <1.3,
        HTTP >=4000.2.23 && <4000.3,
        http-conduit >=2.1.8 && <2.2,
        ks-library >=1.9,
        mtl >=2.2.1 && <2.3,
        old-locale >=1.0.0.7 && <1.1,
        regex-compat >=0.95.1 && <0.96,
        tce-conf ==1.1.*,
        text >=1.2.1.3 && <1.3,
        text-format >=0.3.1.1 && <0.4,
        time >=1.5.0.1 && <1.6,
        utf8-string >=1.0.1.1 && <1.1
    hs-source-dirs: src
    other-modules:
        KS.Locate.Config
        KS.Locate.Locate
        KS.Locate.Opts
        KS.Locate.Places.Geocoding
        KS.Locate.Places.Match
        KS.Locate.Places.NameWords
        KS.Locate.Places.Places
        KS.Log
        KS.SourceConfig
        KS.Util
    ghc-options: -Wall

executable ks-dbinsert
    main-is: ks-dbinsert.hs
    build-depends:
        aeson ==0.9.*,
        aeson-pretty >=0.7.2 && <0.8,
        attoparsec >=0.13.0.1 && <0.14,
        base >=3 && <5,
        bson >=0.3.2.1 && <0.4,
        bson-generic >=0.0.8.1 && <0.1,
        bytestring >=0.10.6.0 && <0.11,
        containers >=0.5.6.2 && <0.6,
        directory >=1.2.2.0 && <1.3,
        filepath >=1.4.0.0 && <1.5,
        hslogger >=1.2.9 && <1.3,
        HTTP >=4000.2.23 && <4000.3,
        http-conduit >=2.1.8 && <2.2,
        ks-library >=1.9,
        mongoDB <=2.0.8,
        mtl >=2.2.1 && <2.3,
        old-locale >=1.0.0.7 && <1.1,
        regex-compat >=0.95.1 && <0.96,
        tce-conf ==1.1.*,
        text >=1.2.1.3 && <1.3,
        text-format >=0.3.1.1 && <0.4,
        time >=1.5.0.1 && <1.6,
        utf8-string >=1.0.1.1 && <1.1
    hs-source-dirs: src
    other-modules:
        KS.Database.Mongo.Config
        KS.Database.Mongo.Util
        KS.DBInsert.Opts
    ghc-options: -Wall

executable ks-regionupd
    main-is: ks-regionupd.hs
    build-depends:
        aeson ==0.9.*,
        base >=3 && <5,
        bson >=0.3.2.1 && <0.4,
        bytestring >=0.10.6.0 && <0.11,
        containers >=0.5.6.2 && <0.6,
        filepath >=1.4.0.0 && <1.5,
        hslogger >=1.2.9 && <1.3,
        ks-library >=1.9,
        mongoDB <=2.0.8,
        mtl >=2.2.1 && <2.3,
        old-locale >=1.0.0.7 && <1.1,
        regex-compat >=0.95.1 && <0.96,
        tce-conf ==1.1.*,
        text >=1.2.1.3 && <1.3,
        text-format >=0.3.1.1 && <0.4,
        time >=1.5.0.1 && <1.6,
        utf8-string >=1.0.1.1 && <1.1
    hs-source-dirs: src
    other-modules:
        KS.Database.Mongo.Config
        KS.Database.Mongo.Util
        KS.Log
        KS.RegionUpd.Opts
    ghc-options: -Wall

executable ks-datefix
    main-is: ks-datefix.hs
    build-depends:
        aeson ==0.9.*,
        base >=3 && <5,
        bson >=0.3.2.1 && <0.4,
        bson-generic >=0.0.8.1 && <0.1,
        bytestring >=0.10.6.0 && <0.11,
        containers >=0.5.6.2 && <0.6,
        filepath >=1.4.0.0 && <1.5,
        hslogger >=1.2.9 && <1.3,
        ks-library >=1.9,
        mongoDB <=2.0.8,
        mtl >=2.2.1 && <2.3,
        old-locale >=1.0.0.7 && <1.1,
        regex-compat >=0.95.1 && <0.96,
        tce-conf ==1.1.*,
        text >=1.2.1.3 && <1.3,
        text-format >=0.3.1.1 && <0.4,
        time >=1.5.0.1 && <1.6,
        utf8-string >=1.0.1.1 && <1.1
    hs-source-dirs: src
    other-modules:
        KS.Database.Mongo.Config
        KS.Database.Mongo.Util
        KS.Log
    ghc-options: -Wall

test-suite test-Locate
    type: exitcode-stdio-1.0
    main-is: test-Locate.hs
    build-depends:
        aeson ==0.9.*,
        base >=3 && <5,
        bytestring >=0.10.6.0 && <0.11,
        containers >=0.5.6.2 && <0.6,
        directory >=1.2.2.0 && <1.3,
        exceptions >=0.8.2.1 && <0.9,
        filepath >=1.4.0.0 && <1.5,
        hslogger >=1.2.9 && <1.3,
        HUnit >=1.3.1.1 && <1.4,
        ks-library >=1.9,
        mtl >=2.2.1 && <2.3,
        regex-compat >=0.95.1 && <0.96,
        tce-conf ==1.1.*,
        text >=1.2.1.3 && <1.3,
        time >=1.5.0.1 && <1.6,
        utf8-string >=1.0.1.1 && <1.1
    hs-source-dirs: src testsuite
    other-modules:
        NameWords
    ghc-options: -Wall
test-suite test-Database
    type: exitcode-stdio-1.0
    main-is: test-Database.hs
    build-depends:
        base >=3 && <5,
        bson >=0.3.2.1 && <0.4,
        HUnit >=1.3.1.1 && <1.4,
        mongoDB <=2.0.8,
        text >=1.2.1.3 && <1.3
    hs-source-dirs: src testsuite
    other-modules:
        Mongo
    ghc-options: -Wall
