name: ks-download
version: 1.24
cabal-version: >=1.10
build-type: Simple
license: BSD3
license-file: LICENSE
copyright: 2014-2016 Dino Morelli
maintainer: Dino Morelli <dino@ui3.info>
stability: experimental
homepage: http://hub.darcs.net/dino/ks-download
synopsis: Data downloader and parser for the KitchenSnitch project
description:
    Bar Baz
category: Unknown
author: Dino Morelli
tested-with: GHC >=7.10.1
data-files:
    resources/ks-download.conf
    resources/ks-download-nc_chatham.conf
    resources/ks-download-nc_durham.conf
    resources/ks-download-nc_orange.conf
    resources/ks-download-nc_wake.conf
    resources/mongodb.conf
extra-source-files:
    changelog.md
    README.md
    util/gentags.sh
    util/inspconv.coffee
    util/install.hs
    util/ks-dl-nightly-cdp.sh
    util/ks-dl-nightly-dhd.sh
    util/resources/geocode.json
    util/resources/nc-wake/searchResultPage.html
    util/resources/places.json

source-repository head
    type: darcs
    location: http://hub.darcs.net/dino/ks-download

executable ks-dlinsp-cdp
    main-is: ks-dlinsp-cdp.hs
    build-depends:
        aeson,
        base >=3 && <5,
        bytestring,
        containers,
        exceptions,
        filepath,
        HTTP,
        ks-library >=1.10,
        lens,
        lens-aeson,
        mongoDB,
        mtl,
        regex-compat,
        tagsoup,
        tce-conf,
        text,
        time,
        utf8-string,
        wreq
    default-language: Haskell2010
    hs-source-dirs: src
    other-modules:
        KS.Database.Mongo.Config
        KS.Database.Mongo.Util
        KS.DLInsp.CDP.Downloader
        KS.DLInsp.CDP.Opts
        KS.DLInsp.CDP.Types
        KS.DLInsp.Util
        KS.SourceConfig
        KS.Util
    ghc-options: -Wall

executable ks-dlinsp-dhd
    main-is: ks-dlinsp-dhd.hs
    build-depends:
        aeson,
        base >=3 && <5,
        bytestring,
        containers,
        exceptions,
        filepath,
        HTTP,
        ks-library >=1.10,
        mongoDB,
        mtl,
        regex-compat,
        tagsoup,
        tce-conf,
        text,
        time,
        utf8-string
    default-language: Haskell2010
    hs-source-dirs: src
    other-modules:
        KS.Database.Mongo.Config
        KS.Database.Mongo.Util
        KS.DLInsp.DHD.Downloader
        KS.DLInsp.DHD.Opts
        KS.DLInsp.DHD.Types
        KS.DLInsp.Util
        KS.SourceConfig
        KS.Util
    ghc-options: -Wall

executable ks-locate
    main-is: ks-locate.hs
    build-depends:
        aeson,
        aeson-pretty,
        attoparsec,
        base >=3 && <5,
        bson,
        bytestring,
        containers,
        directory,
        exceptions,
        filepath,
        hslogger,
        HTTP,
        http-conduit,
        ks-library >=1.10,
        mtl,
        old-locale,
        regex-compat,
        tce-conf,
        text,
        text-format,
        time,
        utf8-string
    default-language: Haskell2010
    hs-source-dirs: src
    other-modules:
        KS.Locate.Config
        KS.Locate.Locate
        KS.Locate.Opts
        KS.Locate.Places.Geocoding
        KS.Locate.Places.Match
        KS.Locate.Places.NameWords
        KS.Locate.Places.Places
        KS.Log
        KS.SourceConfig
        KS.Util
    ghc-options: -Wall

executable ks-dbinsert
    main-is: ks-dbinsert.hs
    build-depends:
        aeson,
        aeson-pretty,
        attoparsec,
        base >=3 && <5,
        bson,
        bson-generic,
        bytestring,
        containers,
        directory,
        filepath,
        hslogger,
        HTTP,
        http-conduit,
        ks-library >=1.10,
        mongoDB,
        mtl,
        old-locale,
        regex-compat,
        tce-conf,
        text,
        text-format,
        time,
        utf8-string
    default-language: Haskell2010
    hs-source-dirs: src
    other-modules:
        KS.Database.Mongo.Config
        KS.Database.Mongo.Util
        KS.DBInsert.Opts
    ghc-options: -Wall

executable ks-regionupd
    main-is: ks-regionupd.hs
    build-depends:
        aeson,
        base >=3 && <5,
        bson,
        bytestring,
        containers,
        filepath,
        hslogger,
        ks-library >=1.10,
        mongoDB,
        mtl,
        old-locale,
        regex-compat,
        tce-conf,
        text,
        text-format,
        time,
        utf8-string
    default-language: Haskell2010
    hs-source-dirs: src
    other-modules:
        KS.Database.Mongo.Config
        KS.Database.Mongo.Util
        KS.Log
        KS.RegionUpd.Opts
        KS.SourceConfig
    ghc-options: -Wall

executable ks-closed
    main-is: ks-closed.hs
    build-depends:
        aeson,
        attoparsec,
        base >=3 && <5,
        bson,
        bson-generic,
        bytestring,
        containers,
        directory,
        exceptions,
        filepath,
        hslogger,
        HTTP,
        http-conduit,
        ks-library >=1.10,
        lens,
        mongoDB,
        mtl,
        old-locale,
        regex-compat,
        tce-conf,
        text,
        text-format,
        time,
        utf8-string,
        wreq
    default-language: Haskell2010
    hs-source-dirs: src
    other-modules:
        KS.Closed.Opts
        KS.Database.Mongo.Config
        KS.Database.Mongo.Util
        KS.Locate.Config
        KS.Locate.Locate
        KS.Locate.Places.Places
        KS.Log
        KS.SourceConfig
        KS.Util
    ghc-options: -Wall

test-suite test-Locate
    type: exitcode-stdio-1.0
    main-is: test-Locate.hs
    build-depends:
        aeson,
        base >=3 && <5,
        bytestring,
        containers,
        directory,
        exceptions,
        filepath,
        hslogger,
        hspec,
        ks-library >=1.10,
        mtl,
        regex-compat,
        tce-conf,
        text,
        time,
        utf8-string
    default-language: Haskell2010
    hs-source-dirs: src testsuite
    other-modules:
        KS.Locate.Config
        KS.Locate.Locate
        KS.Locate.Places.NameWords
        KS.Log
        KS.SourceConfig
        NameWords
    ghc-options: -Wall
